# jira-amazon-bridge

./: .bandit  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
python/bridge/: es.py  main.py  requirements.txt
python/cognito/: example_event.json  main.py  new-account.template.html
python/connector/: jira.py  util.py
terraform/modules/connector/: cron.tf  iam.tf  main.tf
terraform/modules/lambda_bridge/: README.md  cron.tf  iam.tf  main.tf  variables.tf
terraform/modules/lambda_cognito/: README.md  iam.tf  main.tf  outputs.tf  variables.tf
terraform/modules/opensearch/: README.md  cognito.tf  iam.tf  main.tf  opensearch.tf  outputs.tf  route53.tf  variables.tf
terraform/modules/opensearch-users/: README.md  cf_template.json  cf_template_silent.json  main.tf  variables.tf
terraform/prod/: .terraform.lock.hcl  README.md  main.tf  providers.tf  variables.tf
