[tool.poetry]
authors = ["Alexey Aksenov <ezh@ezh.msk.ru>"]
description = "JIRA workload OpenSearch connector"
name = "workload"
version = "1.0.0"

[tool.poetry.dependencies]
boto3 = "^1.20.0"
opensearch-py = "^1.0.0"
python = "^3.9"
requests = "^2.26.0"
requests-aws4auth = "^1.1.1"
wdb = "3.3.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
ipython = "^7.29.0"
pre-commit = "^2.15.0"
flake8 = "^4.0.1"

[build-system]
build-backend = "poetry.masonry.api"
requires = [
  "poetry-core>=1.0.0",
  "setuptools>=30.3.0,<50",
  "wheel",
]

[tool.isort]
include_trailing_comma = true
line_length = 88
multi_line_output = 3

[tool.black]
line_length = 88
